--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-            <script src="https://unpkg.com/vue"></script>
+            <script src="vue.js"></script>
 
             <div id="app">
                     
